# python-click-autocomplete-example

./: LICENSE  README.md  pyproject.toml
clickomplete/: __init__.py  const.py
clickomplete/autocomplete/: .clicko-complete.bash  .clicko-complete.fish  .clicko-complete.zsh
clickomplete/scripts/: __init__.py  autocomplete.py  clicko.py
