[tool.poetry]
name = "clickomplete"
version = "0.0.1"
description = "Example of autocomplete with Click"
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ggirelli/python-click-autocomplete-example"
repository = "https://github.com/ggirelli/python-click-autocomplete-example"
keywords = ["python", "autocomplete", "example"]
classifiers = [
    "Environment :: Console",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
rich = ">=9,<11"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
mypy = "^0.910"

[tool.poetry.scripts]
"clicko" = "clickomplete.scripts.clicko:main"
"clicko-autocomplete" = "clickomplete.scripts.autocomplete:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
